# data-quality-pf

./: .gitignore  API_REFERENCE.md  COMPREHENSIVE_FIXES_COMPLETED.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION.md  ENHANCED_FEATURES_DOCUMENTATION.md  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  OVERRIDE_FUNCTIONALITY_GUIDE.md  QUICK_START.md  README.md  SETUP_GUIDE.md  requirements.txt  test.py  test_websocket.py
backend/: .env.example  WORKFLOW_ARCHITECTURE.md  clear_jobs.py  database.py  main.py  migrate_db.py  models.py  pyproject.toml  simple_clear_jobs.py  simple_test_uc1.py  test_db.py  test_uc1_duckdb.py
backend/agents/: base_config.py  uc1_agent.py  uc1_duckdb_agent.py  uc1_sparse_data_agent.py  uc4_agent.py  uc4_duckdb_agent.py  uc4_duplicate_agent.py
backend/app/: __init__.py  database.py  models.py  schemas.py  websocket_manager.py
backend/outputs/: MCC Test Data_results_20250820_174701.json  MCC Test Data_results_20250820_182925.json  MCC Test Data_results_20250820_183004.json  MCC Test Data_results_20250820_184058.json  example_dataset_1_results_20250820_182834.json  example_dataset_1_results_20250820_182952.json  example_dataset_1_results_20250820_184057.json  example_dataset_2_results_20250820_182850.json  example_dataset_2_results_20250820_182952.json  example_dataset_2_results_20250820_184051.json  example_dataset_results_20250820_182855.json  example_dataset_results_20250820_183003.json  example_dataset_results_20250820_184052.json
backend/routes/: __init__.py  batch.py  jobs.py  jobs_backup.py  jobs_new.py  jobs_old.py  upload.py
(+47 files in other folders)
